초기버전 수정

--- a/main.ipynb
+++ b/main.ipynb
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1389,7 +1389,7 @@
        "9  2015-10-07      19        NaN    LCD  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1401,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1409,13 +1409,13 @@
     "#컬럼명 변경(Unnamed -> 이름 붙여준다)\n",
     "Data1.columns = ['대여소번호', '대여소명', '자치구', '상세주소', '위도', '경도', '설치시기', '거치대수lcd', '거치대수qr', '운영방식']\n",
     "\n",
-    "#불필요 칼럼 제거 (상세주소 컬럼은 불필요)\n",
-    "Data1 = Data1.drop(['상세주소'], axis = 1, inplace = False)"
+    "#불필요 칼럼 제거 (상세주소, 운영방식 컬럼은 불필요)\n",
+    "Data1 = Data1.drop(['상세주소', '운영방식'], axis = 1, inplace = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1445,9 +1445,7 @@
        "      <th>위도</th>\n",
        "      <th>경도</th>\n",
        "      <th>설치시기</th>\n",
-       "      <th>거치대수lcd</th>\n",
-       "      <th>거치대수qr</th>\n",
-       "      <th>운영방식</th>\n",
+       "      <th>거치대수</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1460,8 +1458,6 @@
        "      <td>126.971451</td>\n",
        "      <td>2015-10-07</td>\n",
        "      <td>16</td>\n",
-       "      <td>0</td>\n",
-       "      <td>LCD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1472,8 +1468,6 @@
        "      <td>126.974060</td>\n",
        "      <td>2015-10-07</td>\n",
        "      <td>12</td>\n",
-       "      <td>0</td>\n",
-       "      <td>LCD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1484,8 +1478,6 @@
        "      <td>126.974663</td>\n",
        "      <td>2015-10-07</td>\n",
        "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>LCD</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -1495,9 +1487,7 @@
        "      <td>37.572113</td>\n",
        "      <td>126.977577</td>\n",
        "      <td>2021-01-26</td>\n",
-       "      <td>0</td>\n",
        "      <td>7</td>\n",
-       "      <td>QR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -1508,30 +1498,21 @@
        "      <td>126.978355</td>\n",
        "      <td>2015-10-07</td>\n",
        "      <td>16</td>\n",
-       "      <td>0</td>\n",
-       "      <td>LCD</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   대여소번호         대여소명  자치구         위도          경도        설치시기 거치대수lcd 거치대수qr  \\\n",
-       "4  301.0  경복궁역 7번출구 앞  종로구  37.575794  126.971451  2015-10-07      16      0   \n",
-       "5  302.0  경복궁역 4번출구 뒤  종로구  37.575947  126.974060  2015-10-07      12      0   \n",
-       "6  303.0  광화문역 1번출구 앞  종로구  37.571770  126.974663  2015-10-07       8      0   \n",
-       "7  304.0  광화문역 2번출구 앞  종로구  37.572113  126.977577  2021-01-26       0      7   \n",
-       "8  305.0       종로구청 옆  종로구  37.572582  126.978355  2015-10-07      16      0   \n",
-       "\n",
-       "  운영방식  \n",
-       "4  LCD  \n",
-       "5  LCD  \n",
-       "6  LCD  \n",
-       "7   QR  \n",
-       "8  LCD  "
+       "   대여소번호         대여소명  자치구         위도          경도        설치시기  거치대수\n",
+       "4  301.0  경복궁역 7번출구 앞  종로구  37.575794  126.971451  2015-10-07    16\n",
+       "5  302.0  경복궁역 4번출구 뒤  종로구  37.575947  126.974060  2015-10-07    12\n",
+       "6  303.0  광화문역 1번출구 앞  종로구  37.571770  126.974663  2015-10-07     8\n",
+       "7  304.0  광화문역 2번출구 앞  종로구  37.572113  126.977577  2021-01-26     7\n",
+       "8  305.0       종로구청 옆  종로구  37.572582  126.978355  2015-10-07    16"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1542,12 +1523,20 @@
     "Data1['거치대수qr'] = Data1['거치대수qr'].fillna(0)\n",
     "Data1 = Data1.dropna(subset=['대여소번호'])\n",
     "Data1 = Data1.dropna(subset=['위도'])\n",
+    "Data1 = Data1.dropna(subset=['설치시기'])\n",
+    "#거치대수로 통일 및 형변환\n",
+    "Data1['거치대수lcd'] = pd.to_numeric(Data1['거치대수lcd'])\n",
+    "Data1['거치대수qr'] = pd.to_numeric(Data1['거치대수qr'])\n",
+    "Data1['거치대수'] = Data1['거치대수qr'] + Data1['거치대수lcd']\n",
+    "\n",
+    "Data1 = Data1.drop(['거치대수qr', '거치대수lcd'], axis = 1, inplace = False)\n",
+    "\n",
     "Data1.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1555,21 +1544,19 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 2042 entries, 4 to 2157\n",
-      "Data columns (total 9 columns):\n",
-      " #   Column   Non-Null Count  Dtype  \n",
-      "---  ------   --------------  -----  \n",
-      " 0   대여소번호    2042 non-null   float64\n",
-      " 1   대여소명     2042 non-null   object \n",
-      " 2   자치구      2042 non-null   object \n",
-      " 3   위도       2042 non-null   object \n",
-      " 4   경도       2042 non-null   object \n",
-      " 5   설치시기     2040 non-null   object \n",
-      " 6   거치대수lcd  2042 non-null   object \n",
-      " 7   거치대수qr   2042 non-null   object \n",
-      " 8   운영방식     2042 non-null   object \n",
-      "dtypes: float64(1), object(8)\n",
-      "memory usage: 159.5+ KB\n"
+      "Int64Index: 2040 entries, 4 to 2157\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   대여소번호   2040 non-null   float64\n",
+      " 1   대여소명    2040 non-null   object \n",
+      " 2   자치구     2040 non-null   object \n",
+      " 3   위도      2040 non-null   object \n",
+      " 4   경도      2040 non-null   object \n",
+      " 5   설치시기    2040 non-null   object \n",
+      " 6   거치대수    2040 non-null   int64  \n",
+      "dtypes: float64(1), int64(1), object(5)\n",
+      "memory usage: 127.5+ KB\n"
      ]
     }
    ],
@@ -1582,12 +1569,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 자치구별 대여소 개수 "
+    "* 자치구별 거치대 개수 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "자치구\n",
+       "송파구     1720\n",
+       "강서구     1677\n",
+       "서초구     1591\n",
+       "강남구     1482\n",
+       "영등포구    1475\n",
+       "Name: 거치대수, dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#자치구별 대여소 개수 데이터 그룹핑\n",
+    "Holder = Data1.groupby('자치구')['거치대수'].sum()\n",
+    "Holder.sort_values(ascending = False, inplace = True)\n",
+    "Holder.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* 자치구별 대여소 개수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1602,23 +1625,16 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#자치구별 대여소 개수 데이터 그룹핑\n",
-    "Location = Data1.groupby(by = ['자치구']).size()\n",
-    "Location.sort_values(ascending = False, inplace = True)\n",
-    "Location.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* 자치구별 거치대 개수"
+    "#자치구별 거치대 개수 데이터 그룹핑\n",
+    "Rental = Data1.groupby(by = ['자치구']).size()\n",
+    "Rental.sort_values(ascending = False, inplace = True)\n",
+    "Rental.head()"
    ]
   },
   {
