--- a/sub-analysis.ipynb
+++ b/sub-analysis.ipynb
@@ -9,20 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 모듈 import, 필요에 따라 더 추가\n",
-    "import re\n",
-    "import pandas as pd\n",
-    "import os\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import numpy as np\n",
-    "from sklearn.metrics import r2_score\n",
+    "import re   # 문자열 정규식 연산을 위해 import\n",
+    "import pandas as pd # 데이터 프레임 가공 및 분석을 위함\n",
+    "import os   #csv파일이 월별로 1개씩 존재하는데, 해당 데이터를 합치기 위함\n",
+    "import matplotlib.pyplot as plt # 그래프를 그리기 위함\n",
+    "import seaborn as sns   # 그래프를 그리기 위함\n",
+    "import numpy as np  # 추세선을 그릴 때, 학습 데이터를 만들기 위함\n",
+    "from sklearn.metrics import r2_score    # 데이터를 학습시키고, 추세선을 그리기 위함\n",
     "\n",
-    "plt.style.use('seaborn')\n",
+    "plt.style.use('seaborn')    #한글폰트가 깨지지 않게 한다.\n",
     "sns.set(font=\"NanumGothic\",rc={\"axes.unicode_minus\":False})"
    ]
   },
@@ -37,14 +37,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "forders_time=os.listdir(\"서울특별시 공공자전거 이용정보(시간대별)_2021년\")\n",
     "forders_month=os.listdir(\"서울특별시 공공자전거 이용정보(월별)_2021년\")\n",
+    "df_month=pd.DataFrame() #빈 데이터 프레임으로 만들어 준 뒤, 뒤의 for문을 사용해서 폴더내에 있는 csv파일을 불러온다.\n",
     "df_day=pd.read_csv(\"서울특별시 공공자전거 이용정보(시간대별)_21.01.csv\",encoding='cp949')\n",
-    "df_month=pd.DataFrame()\n",
     "df_cor=pd.read_csv(\"서울특별시 공공자전거 이용정보(시간대별)_2021년/서울특별시 공공자전거 이용정보(시간대별)_21.12.csv\",encoding='cp949')\n",
     "df_location=pd.read_csv(\"공공자전거 대여소 정보(21.12월 기준).csv\",encoding='cp949')\n",
     "df_member=pd.read_csv(\"서울특별시 공공자전거 신규가입자 정보(일별).csv\",encoding='cp949')\n",
@@ -65,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -165,18 +164,18 @@
        "2   0.00  0.00     0.00     7  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_day.head(3)"
+    "df_day.head(3)  # 해당 데이터프레임의 위에서부터 3개의 행을 불러와서 데이터를 확인한다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +279,7 @@
        "2     13.0      NaN      NaN  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +412,7 @@
        "4  2015-09-06      20        NaN    LCD  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +508,7 @@
        "4  2018-07-20  회원-내국인   50대  NaN    91"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +605,7 @@
        "freq         47304           1799  585211  262477  270097   73806   74193"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +752,7 @@
        "4  0.00     0.00    17  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +793,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +836,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -893,14 +892,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\enqu7\\AppData\\Local\\Temp\\ipykernel_13752\\2478797993.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\enqu7\\AppData\\Local\\Temp\\ipykernel_28648\\2478797993.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -942,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +962,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -990,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1010,7 @@
        "Length: 2695, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1023,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1128,7 @@
        "[1323515 rows x 2 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1143,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1240,7 +1239,7 @@
        "2673                9990_도봉센터  6540.000000"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1271,15 +1270,15 @@
    "source": [
     "# 이동거리 시각화 (막대그래프 사용)\n",
     "title_font = {'fontsize': 20,'fontweight': 'bold'}\n",
-    "title = plt.title('평균 이동거리 상위 10개의 대여소', fontdict=title_font, loc='left', pad=20)\n",
-    "plt.barh(disave['대여소명'],disave['거리(M)'],color='darkseagreen')\n",
-    "plt.xlabel('이동거리 (m)')\n",
-    "plt.show()"
+    "title = plt.title('평균 이동거리 상위 10개의 대여소', fontdict=title_font, loc='left', pad=20)  #제목 설정\n",
+    "plt.barh(disave['대여소명'],disave['거리(M)'],color='darkseagreen') # bar차트 꾸미기\n",
+    "plt.xlabel('이동거리 (m)')  #x축에 대한 설명이 없으므로, label을 통해 축 제목을 추가한다.\n",
+    "plt.show()  #그래프를 표기한다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1385,7 +1384,7 @@
        "[1323515 rows x 2 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1399,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1496,7 +1495,7 @@
        "1153            249. 여의도중학교 옆  52.318514"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1510,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1542,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1577,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1591,7 +1590,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1604,7 +1603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1615,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1627,19 +1626,19 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_sex=dfsex.value_counts(normalize=True)\n",
+    "df_sex=dfsex.value_counts(normalize=True)   #대여 건수의 비율을 성별에 따라 나타낸다.\n",
     "df_sex"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1667,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1684,7 +1683,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1701,7 +1700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1711,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1728,7 +1727,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1740,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
